<resources>
  <string name="app_name">Fleet Reporter</string>
  <string name="accessibility_service_description">This service automates USSD calls for purchasing mobile phone credit.</string>
  <string name="registered_as">Registered as:</string>
  <string name="register_now">Register now</string>
  <string name="unpause">Unpause</string>
  <string name="sleep_mode">Sleep mode</string>
  <string name="notif_gps_signal_lost">GPS signal lost.</string>
  <string name="notif_unable_to_send_sms">Unable to send SMS.</string>
  <string name="notif_reporting_your_location">Reporting your location.</string>
  <string name="fmt_notif_last_sms_sent_tm">Last SMS sent %s.</string>
  <string name="notif_next_report_lt_1_min"><![CDATA[Next report in < 1 min.]]></string>
  <string name="fmt_notif_next_report_n_min">Next report in %d min.</string>
  <string name="no_gps">no GPS</string>
  <string name="no_gps_signal_since">no signal since</string>
  <string name="stopped_here_for">stopped here for</string>
  <string name="fmt_dist_in_dur">%s in %s</string>
  <string name="stopped">stopped</string>
  <string name="since_last_stop">since last stop</string>
  <string name="no_sms">no SMS</string>
  <string name="sent_last_report">sent last report</string>
  <string name="unable_to_send_since">unable to send since</string>
  <string name="nothing_to_send_yet">nothing to send yet</string>
  <string name="fmt_n_percent_battery">%d%% battery</string>
  <string name="power_is_connected">power is connected</string>
  <string name="no_power_source">no power source</string>
  <string name="battery_state_unknown">battery state unknown</string>
  <string name="registration">Registration</string>
  <string name="receivers_mobile_number_colon">Receiver\'s mobile number:</string>
  <string name="settings_change_needed">Settings change needed</string>
  <string name="accessibility_service_instructions">Automatic purchasing of SMS credit requires a change to your Accessibility settings.\u0020\u0020On the next screen, please:\n\n\u0020\u0020\u2022 Find \"Fleet Reporter\"\n\u0020\u0020\u2022 Turn it on\n\u0020\u0020\u2022 Use the Back button to return here</string>
  <string name="open_settings_button">Open Settings</string>
  <string name="register_additional_numbers">Register additional numbers</string>
  <string name="sent_registration_messages_to">Sent registration messages to the receiver from:</string>
  <string name="send_diagnostics">Send diagnostics</string>
  <string name="fmt_send_diagnostics_n_left">Send diagnostics (%d left)</string>
  <string name="ready_to_proceed">Ready to proceed</string>
  <string name="register">Register</string>
  <string name="pause_reporting">Pause reporting</string>
  <string name="settings_ellipsis">Settings...</string>
  <string name="update_app_ellipsis">Update app...</string>
  <string name="update_app">Update app</string>
  <string name="ensure_internet_instructions">Please ensure a good Internet connection, then proceed.</string>
  <string name="reporting_as_colon">Reporting as:</string>
  <string name="reporting_is_paused">Reporting is paused!</string>
  <string name="not_yet_registered">Not yet registered</string>
  <string name="fmt_travelled_dist">travelled %s</string>
  <string name="fmt_period_n_sec">%d sec</string>
  <string name="fmt_period_n_min">%d min</string>
  <string name="fmt_period_f_h">%.1f h</string>
  <string name="fmt_period_n_h">%d h</string>
  <string name="fmt_period_f_d">%.1f d</string>
  <string name="fmt_period_n_d">%d d</string>
  <string name="time_just_now">just now</string>
  <string name="fmt_time_dur_ago">%s ago</string>
  <string name="error">Error</string>
  <string name="invalid_number">Invalid number.</string>
  <string name="settings">Settings</string>
  <string name="pref_daily_point_sms_limit">Daily SMS limit for positions</string>
  <string name="pref_daily_point_sms_limit_summary">Maximum number of position texts to send per day, not including replies to immediate location requests, registration messages, or other SMS commands</string>
  <string name="pref_recording_interval_resting">Recording interval while stopped</string>
  <string name="pref_recording_interval_resting_summary">Maximum minutes between recorded points while stopped</string>
  <string name="pref_recording_interval_moving">Recording interval while moving</string>
  <string name="pref_recording_interval_moving_summary">Maximum minutes between recorded points while moving</string>
  <string name="pref_recording_interval_after_go">Recording interval upon starting to move</string>
  <string name="pref_recording_interval_after_go_summary">Minutes after departing from a stop to record an extra point</string>
  <string name="pref_reporting_interval_gps_outage">Reporting interval during GPS outage</string>
  <string name="pref_reporting_interval_gps_outage_summary">Minutes between GPS outage reports</string>
  <string name="pref_resting_radius">Resting radius</string>
  <string name="pref_resting_radius_summary">Range, in meters, of movement to interpret as not moving</string>
  <string name="pref_settling_period">Settling period</string>
  <string name="pref_settling_period_summary">Minutes of staying within the radius to interpret as a stop</string>
  <string name="pref_sleep_start">Sleep starting time</string>
  <string name="pref_sleep_start_summary">Start of daily period when reporting is suppressed</string>
  <string name="pref_sleep_end">Sleep ending time</string>
  <string name="pref_sleep_end_summary">End of daily period when reporting is suppressed</string>
  <string name="pref_sms_purchase_interval">Minimum SMS purchasing interval</string>
  <string name="pref_sms_purchase_interval_summary">Minutes after purchasing an SMS package to hold off purchasing another</string>
  <string name="pref_developer_settings">Developer settings</string>
</resources>
