<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <EditTextPreference
      android:key="pref_recording_interval"
      android:title="@string/pref_recording_interval"
      android:summary="@string/pref_recording_interval_summary"
      android:numeric="decimal"
      android:inputType="numberDecimal"
      android:defaultValue="10" />

  <EditTextPreference
      android:key="pref_recording_interval_after_go"
      android:title="@string/pref_recording_interval_after_go"
      android:summary="@string/pref_recording_interval_after_go_summary"
      android:numeric="decimal"
      android:inputType="numberDecimal"
      android:defaultValue="1" />

  <EditTextPreference
      android:key="pref_settling_period"
      android:title="@string/pref_settling_period"
      android:summary="@string/pref_settling_period_summary"
      android:numeric="decimal"
      android:inputType="numberDecimal"
      android:defaultValue="2" />

  <ca.zesty.fleetreporter.TimePreference
      android:key="pref_sleep_start"
      android:title="@string/pref_sleep_start"
      android:summary="@string/pref_sleep_start_summary" />

  <ca.zesty.fleetreporter.TimePreference
      android:key="pref_sleep_end"
      android:title="@string/pref_sleep_end"
      android:summary="@string/pref_sleep_end_summary" />

  <EditTextPreference
      android:key="pref_sms_purchase_interval"
      android:title="@string/pref_sms_purchase_interval"
      android:summary="@string/pref_sms_purchase_interval_summary"
      android:numeric="decimal"
      android:inputType="numberDecimal"
      android:defaultValue="60" />

  <PreferenceScreen
    android:title="@string/pref_developer_settings">

    <CheckBoxPreference
        android:key="pref_show_log"
        android:title="Show message log"
        android:defaultValue="false" />

    <ca.zesty.fleetreporter.TimePreference
        android:key="pref_daily_relaunch_time"
        android:title="Daily relaunch time"
        android:summary="Daily time to shut down and relaunch the app" />

    <CheckBoxPreference
        android:key="pref_simulate_gps_outage"
        android:title="Simulate GPS outage"
        android:summary="Behave as though there is no GPS fix" />
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_destination_number"
        android:title="Destination number"
        android:summary="Do not edit (debugging only)"
        android:defaultValue="" />

    <EditTextPreference
        android:key="pref_reporter_label"
        android:title="Reporter label"
        android:summary="Do not edit (debugging only)"
        android:defaultValue="" />

    <EditTextPreference
        android:key="pref_reporter_id"
        android:title="Reporter ID"
        android:summary="Do not edit (debugging only)"
        android:defaultValue="" />

  </PreferenceScreen>

</PreferenceScreen>
